--- a/SogetiStaffingPlanner/Views/Home/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Home/Index.cshtml
@@ -5,9 +5,9 @@
     <div id="app" class='main'>
         <h2>Practice Manager View</h2>
         <hr />
-        <div v-if="addState === false">
+        <div v-if="addState === false" class="addButton">
             <button v-on:click="addState = true" class="btn btn-primary">
-                Add Opportunity
+                <i class="fa fa-plus"></i>
             </button>
             <div class="form-group"></div>
         </div>
@@ -154,7 +154,7 @@
 
 
         <template>
-            <div style="overflow-x: auto">
+            <div class="scrollBar">
                 <table class='clientView'>
                     <tr>
                         <th>OPPORTUNITY NAME</th>
