--- a/SogetiStaffingPlanner/Views/Shared/_Layout.cshtml
+++ b/SogetiStaffingPlanner/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
         <div id="navContainer">
             <!--<span class='navTitle'>Staffing Planner</span>-->
             <ul class='navItems'>
-                <li><a href="/">Home</a></li>
+                <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
                 <li><a href="/Client/">Clients</a></li>
                 <li><a href="/Position/">Positions</a></li>
                 <li><a href="/Opportunity/">Opportunities</a></li>
