--- a/SogetiStaffingPlanner/Views/Opportunity/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Opportunity/Index.cshtml
@@ -112,7 +112,13 @@
                                     <span class="error">{{ errors.opportunityNotes }}</span>
                                 </div>
                             </div>
-
+                            <template v-if="updateState">
+                                <div class="col-sm-6">
+                                    <label class="col-sm-4">Active: </label>
+                                    <input type="checkbox" id="checkbox" v-model="active">
+                                    <label>{{ this.active }}</label>
+                                </div>
+                            </template>
                             <div class="form-group"></div>
                             <div class="col-sm-6">
                                 <button class="btn btn-primary" v-on:click="onSubmit"><i class="fa fa-pencil"></i> {{ updateState ? 'Update' : 'Add'}}</button>
