--- a/SogetiStaffingPlanner/Views/Position/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Position/Index.cshtml
@@ -151,7 +151,7 @@
                     <div class="col-sm-6">
                         <label class="col-sm-4">Unit Practice: </label>
                         <div class="col-sm-8">
-                            <select class="form-control">
+                            <select class="form-control" v-model="unitPracticeId">
                                 <option selected> ACT</option>
                             </select>
                             <template v-if="errors.unitPracticeId">
