--- a/SogetiStaffingPlanner/Views/Opportunity/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Opportunity/Index.cshtml
@@ -112,13 +112,23 @@
                                     <span class="error">{{ errors.opportunityNotes }}</span>
                                 </div>
                             </div>
-                            <!--<template v-if="updateState">
+                            <template v-if="updateState">
                                 <div class="col-sm-6">
                                     <label class="col-sm-4">Active: </label>
-                                    <input type="checkbox" id="checkbox" v-model="active">
-                                    <label>{{ //this.active }}</label>
+                                    <div class="col-sm-8">
+                                        <button class="btn btn-default" v-on:click="active = !active">
+                                            <div v-if="active">
+                                                <i class="fa fa-thumbs-up"> Active</i>
+                                            </div>
+                                            <template v-else>
+                                                <i class="fa fa-thumbs-down"> Inactive</i>
+                                            </template>
+                                        </button>
+                                    </div>
+
                                 </div>
-                            </template>-->
+                            </template>
+
                             <div class="form-group"></div>
                             <div class="col-sm-6">
                                 <button class="btn btn-primary" v-on:click="onSubmit"><i class="fa fa-pencil"></i> {{ updateState ? 'Update' : 'Add'}}</button>
