--- a/SogetiStaffingPlanner/Views/Client/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/Client/Index.cshtml
@@ -8,7 +8,7 @@
     <h2>Client List</h2>
     <hr />
     <div v-if="states.addState === false" class="addButton">
-        <button v-on:click="states.addState = true" class="btn btn-primary">
+        <button v-on:click="add" class="btn btn-primary">
             <i class="fa fa-pencil"></i> Add Client
         </button>
         <div class="form-group"></div>
