--- a/SogetiStaffingPlanner/Views/Shared/_Layout.cshtml
+++ b/SogetiStaffingPlanner/Views/Shared/_Layout.cshtml
@@ -24,9 +24,7 @@
                 <li><a href="/Client/">Clients</a></li>
                 <li><a href="/Position/">Positions</a></li>
                 <li><a href="/Opportunity/">Opportunities</a></li>
-                <!--<li><a href="/AccountExecutive/">AE</a></li>
-                <li><a href="/Unit/">Unit</a></li>
-                <li><a href="/Region/">Region</a></li>-->
+                <li><a href="/User/">Users</a></li>
             </ul>
         </div>
     </div>
