--- a/SogetiStaffingPlanner/Views/User/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/User/Index.cshtml
@@ -48,7 +48,7 @@
                     <td>{{ user.FullName }}</td>
                     <td>{{ user.PermissionRoleId }}</td>
                     <td>{{ user.ViewRoleId }}</td>
-                    <td><button class="btn btn-success" v-on:click=""><i class="fa fa-edit"></i></button></td>
+                    <td><button class="btn btn-success" v-on:click="edit(user)"><i class="fa fa-edit"></i></button></td>
                 </tr>
             </table>
         </div>
