--- a/SogetiStaffingPlanner/Views/User/Index.cshtml
+++ b/SogetiStaffingPlanner/Views/User/Index.cshtml
@@ -30,7 +30,10 @@
                 <div class="form-group"></div>
                 <label class="col-sm-3" for="clientSubbusiness"> Role: </label>
                 <div class="col-sm-4">
-                    <input class="form-control" type="text" v-model="formData.role" />
+                    <select class="form-control" v-model="formData.role">
+                        <option v-for="role in dropDowns.roles" :value="role.RoleId">{{ role.ViewName }}</option>
+                    </select>
+                   
                     <span class="error">{{ errors.role }}</span>
                 </div>
                 <div class="form-group"></div>
@@ -51,7 +54,7 @@
                 </tr>
                 <tr v-for="user in users">
                     <td>{{ user.FullName }}</td>
-                    <td>{{ user.PermissionRoleId }}</td>
+                    <td>{{ getPermissionName(user.PermissionRoleId) }}</td>
                     <td>{{ user.ViewRoleId }}</td>
                     <td><button class="btn btn-success" v-on:click="edit(user)"><i class="fa fa-edit"></i></button></td>
                 </tr>
